[gd_scene load_steps=6 format=3 uid="uid://8eorouef8qig"]

[ext_resource type="Script" uid="uid://ihy3vfqxnvrl" path="res://main.gd" id="1_bo1nx"]
[ext_resource type="Texture2D" uid="uid://d16ld3yvkw8eb" path="res://Photos/Butcherman.png" id="2_bo1nx"]
[ext_resource type="Texture2D" uid="uid://buxx7u7yn5b5c" path="res://Music/music on.png" id="3_8gbba"]
[ext_resource type="Texture2D" uid="uid://cfcjelys0mbqg" path="res://Music/music off.png" id="4_jjvhh"]

[sub_resource type="ViewportTexture" id="ViewportTexture_0xm2m"]

[node name="Main" type="Node2D"]
script = ExtResource("1_bo1nx")

[node name="Butcherman" type="Sprite2D" parent="."]
position = Vector2(512, 385)
texture = ExtResource("2_bo1nx")

[node name="PlayButton" type="Button" parent="Butcherman"]
anchors_preset = -1
anchor_left = 0.25500003
anchor_top = 0.223
anchor_right = 0.25500003
anchor_bottom = 0.223
offset_left = -560.12
offset_top = -406.264
offset_right = -463.12003
offset_bottom = -363.264
icon = SubResource("ViewportTexture_0xm2m")
flat = true

[node name="QuitButton" type="Button" parent="Butcherman"]
anchors_preset = -1
anchor_left = 0.24800001
anchor_top = 0.45800003
anchor_right = 0.24800001
anchor_bottom = 0.45800003
offset_left = -560.952
offset_top = -403.74402
offset_right = -462.952
offset_bottom = -363.74402
tooltip_text = "This is a quit button."
flat = true

[node name="OptionsButton" type="Button" parent="Butcherman"]
anchors_preset = -1
anchor_left = 0.264
anchor_top = 0.344
anchor_right = 0.264
anchor_bottom = 0.344
offset_left = -590.336
offset_top = -401.19202
offset_right = -426.336
offset_bottom = -366.19202
flat = true

[node name="TextureButton" type="TextureButton" parent="Butcherman"]
offset_left = 376.0
offset_top = -337.0
offset_right = 549.0
offset_bottom = -182.0
scale = Vector2(0.405, 0.405)
toggle_mode = true
texture_normal = ExtResource("3_8gbba")
texture_pressed = ExtResource("4_jjvhh")

[connection signal="pressed" from="Butcherman/PlayButton" to="." method="_on_play_button_pressed"]
[connection signal="pressed" from="Butcherman/QuitButton" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="Butcherman/TextureButton" to="." method="_on_texture_button_pressed"]
